--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.11.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/react-fontawesome": "^3.0.2",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
